--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "root",
+  "name": "@wawawwaa/lib",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -15,6 +15,7 @@
     "build:i18n": "lerna run build --scope=generate-i18n-json",
     "build:extract-chinese": "lerna run build --scope=extract-chinese",
     "build:ttf2woff2": "node --max_old_space_size=4096 ./node_modules/lerna/dist/cli.js run build --scope=ttf2woff2-tools",
+    "build:video-convert": "lerna run build --scope=@wawawwaa/video-convert",
     "test:color": "lerna run test --scope=color-test",
     "test:time-match": "lerna run test --scope=time-match"
   },
